Components working at Share.Components folder

--- a/PDV/Pages/Index.razor
+++ b/PDV/Pages/Index.razor
@@ -1,5 +1,7 @@
 ﻿@page "/"
 
+@using PDV.Shared.Components
+
 <PageTitle>Index</PageTitle>
 
 <h1>Distribuidora ACME</h1>
@@ -9,3 +11,8 @@ Bem vindo ao Ponto de Vendas.
 <SurveyPrompt Title="Como o Blazor está funcionando?" />
 
 <Counter IncrementAmount = "3"/>
+
+<FetchData/>
+
+<Info/>
+
