Resolvido erro no Update e feito pequenas alterações de layout

--- a/PDV/Shared/Components/Info.razor
+++ b/PDV/Shared/Components/Info.razor
@@ -1,13 +1,13 @@
 ﻿@page "/info"
 
-<PageTitle>Info</PageTitle>
+<PageTitle>Informações do Estoque</PageTitle>
 
-<h1>Info</h1>
+<h1>Informações do Estoque</h1>
 
 <p role="status">@infoTest</p>
 
 
 @code {
-    private string infoTest = "Testando componentes criados no folder Share para poder funcionar";
+    private string infoTest = "Tabela, totalização e outros detalhes";
 
 }
