--- a/PDV/Pages/Index.razor
+++ b/PDV/Pages/Index.razor
@@ -8,7 +8,6 @@
 
 <h1>Distribuidora ACME</h1>
 
-Bem vindo ao Ponto de Vendas.
 
 @inject ProdutoService service
 <div class="container">
@@ -77,7 +76,7 @@ Bem vindo ao Ponto de Vendas.
                     <input type="text" id="peso" class="form-control" @bind="@NewProduct.Peso" />
                 </div>
                 <div class="form-group">
-                    <label for="price">Preco</label>
+                    <label for="price">Preço</label>
                     <input type="text" id="preco" class="form-control" @bind="@NewProduct.Preco" />
                 </div>
                 <div class="form-group">
@@ -90,7 +89,7 @@ Bem vindo ao Ponto de Vendas.
             </EditForm>
         </div>
         <div class="col-5 bg-light m-2 justify-content-end">
-            <div class="p-3 mb-1 bg-primary text-white text-center">Update Product</div>
+            <div class="p-3 mb-3 bg-primary text-white text-center">Atualize Produto</div>
             <EditForm Model="@UpdateProduct">
                 <div class="form-group">
                     <label for="name">Nome do Produto</label>
@@ -113,7 +112,7 @@ Bem vindo ao Ponto de Vendas.
                     <input type="text" id="peso" class="form-control" @bind="@UpdateProduct.Peso" />
                 </div>
                 <div class="form-group">
-                    <label for="price">Preco</label>
+                    <label for="price">Preço</label>
                     <input type="text" id="preco" class="form-control" @bind="@UpdateProduct.Preco" />
                 </div>
                 <div class="form-group">
@@ -121,7 +120,7 @@ Bem vindo ao Ponto de Vendas.
                     <input type="text" id="quantidade" class="form-control" @bind="@UpdateProduct.Quantidade" />
                 </div>
                 <div class="text-center p-3 mb-3">
-                    <button class="btn btn-info" @onclick="UpdateProductData"> Update Product</button>
+                    <button class="btn btn-info" @onclick="UpdateProductData"> Atualizar Produto</button>
                 </div>
             </EditForm>
         </div>
