--- a/PDV/Shared/NavMenu.razor
+++ b/PDV/Shared/NavMenu.razor
@@ -11,22 +11,22 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Principal
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                <span class="oi oi-plus" aria-hidden="true"></span> Cadastro
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Estoque
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="info">
                 <span class="oi oi-info" aria-hidden="true"></span> Informações
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="info">
+                <span class="oi oi-cart" aria-hidden="true"></span> Venda
             </NavLink>
         </div>
     </nav>
