--- a/PDV/Shared/NavMenu.razor
+++ b/PDV/Shared/NavMenu.razor
@@ -15,7 +15,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
+            <NavLink class="nav-link" href="estoque">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Estoque
             </NavLink>
         </div>
@@ -25,7 +25,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="info">
+            <NavLink class="nav-link" href="venda">
                 <span class="oi oi-cart" aria-hidden="true"></span> Venda
             </NavLink>
         </div>
