Escolha de mesa  e tratamento de inclusão de produto com quatidade zero

--- a/PDV/Pages/FetchData.razor
+++ b/PDV/Pages/FetchData.razor
@@ -5,6 +5,10 @@
 
 <PageTitle>Estoque</PageTitle>
 
+<div class="text-center">
+    <h1>Distribuidora Império das Bebidas</h1>
+</div>
+
 <h1>Estoque de Produtos</h1>
 
 <p></p>
@@ -24,7 +28,7 @@ else
                 <th>Volume</th>
                 <th>Peso</th>
                 <th>Preço</th>
-                <th>Quantidade</th
+                <th>Quantidade</th>
                 <th>Data</th>
             </tr>
         </thead>
