--- a/PDV/Shared/Components/Info.razor
+++ b/PDV/Shared/Components/Info.razor
@@ -2,6 +2,10 @@
 
 <PageTitle>Informações do Estoque</PageTitle>
 
+<div class="text-center">
+    <h1>Distribuidora Império das Bebidas</h1>
+</div>
+
 <h1>Informações do Estoque</h1>
 
 <p role="status">@infoTest</p>
