--- a/PDV/Shared/Components/Venda.razor
+++ b/PDV/Shared/Components/Venda.razor
@@ -2,9 +2,15 @@
 
 <PageTitle>Venda</PageTitle>
 
+<div class="text-center">
+    <h1>Distribuidora Império das Bebidas</h1>
+</div>
 
-<h1>Venda</h1>
+<h1>Pedido</h1>
+
+<h2>Mesa: </h2><p>@mesaSelec</p>
 
 @code {
+    private string mesaSelec = "Escolha a mesa";
 
 }
