--- a/PDV/Pages/Index.razor
+++ b/PDV/Pages/Index.razor
@@ -14,16 +14,20 @@
 @*    <label for="name"></label>
     <input type="text" id="nome" class="form-control" @bind-value="@ChooseProduct.Nome" @onkeyup="(() => GetProdutoByNome())"/>
 *@
-    <select class="form-select" aria-label="Default select example">
-        <option value="1">Escolha a Mesa</option>
-        <option value="1">Mesa 1</option>
-        <option value="2">Mesa 2</option>
-        <option value="3">Mesa 3</option>
-        <option value="2">Mesa 4</option>
-        <option value="3">Mesa 5</option>
+    <select class="form-select" aria-label="Default select example" @onchange="@CallService">
+
+        <option value=0>Escolha uma mesa</option>
+        @for (int i=1;i<=5;i++)
+        {
+                <option value="@i">Mesa @i</option>
+        }
     </select>
 
 </div>
+
+<div><p>Mesa selecionada: @mesa</p></div>
+<br />
+<div><p>Mesa selecionada: @mesaSel</p></div>
 
 <div class="text-center p-3 mb-3">
     <button class="btn btn-info" @onclick="(() => GetProdutoByNome())">Abri Caixa</button>
@@ -80,6 +84,41 @@
     {
         await service.DeleteProdutoAsync(produto);
         await RefreshProducts();
+    }
+
+
+    string? mesa;
+    string? mesaSel = "Nenhuma ainda";
+
+    //Console.WriteLine(mesa);
+
+
+    private void CallService(ChangeEventArgs e)
+    {
+        mesa = e.Value.ToString();
+
+        Console.Write(mesaSel);
+
+        switch (mesa) {
+            case "1":
+                mesaSel = "1";
+                break;
+            case "2":
+                mesaSel = "2";
+                break;
+            case "3":
+                mesaSel = "3";
+                break;
+            case "4":
+                mesaSel = "4";
+                break;
+            case "5":
+                mesaSel = "5";
+                break;
+            default:
+                mesaSel = "Escolha a mesa";
+                break;
+        }
     }
 }
 
